[package]
name = "markdown-urlfy"
version = "0.1.0"
edition = "2021"
description = "Convert URLs in text to Markdown links."
categories = ["text-processing"]
license = "MIT"

[dependencies]
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
regex = "1.5.4"
encoding_rs = "0.8.33"

[profile.release]
strip = true
codegen-units = 1
lto = true
